test/invalid/idl/dict-nointerfaceobject.idl
// NoInterfaceObject can't appear on a Dictionary
[NoInterfaceObject]
dictionary Dict {};
